@@ -123,15 +123,23 @@ public class IngestServiceTests extends ESTestCase {
     private ThreadPool threadPool;
 
     @Before
-    public void setup(){
+    public void setup() {
         threadPool = mock(ThreadPool.class);
         when(threadPool.generic()).thenReturn(EsExecutors.DIRECT_EXECUTOR_SERVICE);
         when(threadPool.executor(anyString())).thenReturn(EsExecutors.DIRECT_EXECUTOR_SERVICE);
     }
+
     public void testIngestPlugin() {
         Client client = mock(Client.class);
-        IngestService ingestService = new IngestService(mock(ClusterService.class), threadPool, null, null,
-            null, Collections.singletonList(DUMMY_PLUGIN), client);
+        IngestService ingestService = new IngestService(
+            mock(ClusterService.class),
+            threadPool,
+            null,
+            null,
+            null,
+            Collections.singletonList(DUMMY_PLUGIN),
+            client
+        );
         Map<String, Processor.Factory> factories = ingestService.getProcessorFactories();
         assertTrue(factories.containsKey("foo"));
         assertEquals(1, factories.size());
@@ -139,18 +147,36 @@ public class IngestServiceTests extends ESTestCase {
 
     public void testIngestPluginDuplicate() {
         Client client = mock(Client.class);
-        IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () ->
-            new IngestService(mock(ClusterService.class), threadPool, null, null,
-            null, Arrays.asList(DUMMY_PLUGIN, DUMMY_PLUGIN), client));
+        IllegalArgumentException e = expectThrows(
+            IllegalArgumentException.class,
+            () -> new IngestService(
+                mock(ClusterService.class),
+                threadPool,
+                null,
+                null,
+                null,
+                Arrays.asList(DUMMY_PLUGIN, DUMMY_PLUGIN),
+                client
+            )
+        );
         assertTrue(e.getMessage(), e.getMessage().contains("already registered"));
     }
 
     public void testExecuteIndexPipelineDoesNotExist() {
         Client client = mock(Client.class);
-        IngestService ingestService = new IngestService(mock(ClusterService.class), threadPool, null, null,
-            null, Collections.singletonList(DUMMY_PLUGIN), client);
-        final IndexRequest indexRequest =
-            new IndexRequest("_index").id("_id").source(emptyMap()).setPipeline("_id").setFinalPipeline("_none");
+        IngestService ingestService = new IngestService(
+            mock(ClusterService.class),
+            threadPool,
+            null,
+            null,
+            null,
+            Collections.singletonList(DUMMY_PLUGIN),
+            client
+        );
+        final IndexRequest indexRequest = new IndexRequest("_index").id("_id")
+            .source(emptyMap())
+            .setPipeline("_id")
+            .setFinalPipeline("_none");
 
         final SetOnce<Boolean> failure = new SetOnce<>();
         final BiConsumer<Integer, Exception> failureHandler = (slot, e) -> {
@@ -163,8 +189,14 @@ public class IngestServiceTests extends ESTestCase {
         @SuppressWarnings("unchecked")
         final BiConsumer<Thread, Exception> completionHandler = mock(BiConsumer.class);
 
-        ingestService.executeBulkRequest(1, Collections.singletonList(indexRequest), failureHandler, completionHandler, indexReq -> {},
-            Names.WRITE);
+        ingestService.executeBulkRequest(
+            1,
+            Collections.singletonList(indexRequest),
+            failureHandler,
+            completionHandler,
+            indexReq -> {},
+            Names.WRITE
+        );
 
         assertTrue(failure.get());
         verify(completionHandler, times(1)).accept(Thread.currentThread(), null);
@@ -178,7 +210,9 @@ public class IngestServiceTests extends ESTestCase {
         assertThat(ingestService.pipelines().size(), is(0));
 
         PipelineConfiguration pipeline = new PipelineConfiguration(
-            "_id",new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}"), XContentType.JSON
+            "_id",
+            new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}"),
+            XContentType.JSON
         );
         IngestMetadata ingestMetadata = new IngestMetadata(Collections.singletonMap("_id", pipeline));
         clusterState = ClusterState.builder(clusterState)
@@ -236,7 +270,9 @@ public class IngestServiceTests extends ESTestCase {
         assertThat(ingestService.pipelines().get("_id3").pipeline.getProcessors().size(), equalTo(0));
 
         pipeline3 = new PipelineConfiguration(
-            "_id3",new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}"), XContentType.JSON
+            "_id3",
+            new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}"),
+            XContentType.JSON
         );
         ingestMetadata = new IngestMetadata(Map.of("_id1", pipeline1, "_id3", pipeline3));
 
@@ -257,13 +293,16 @@ public class IngestServiceTests extends ESTestCase {
     public void testDelete() {
         IngestService ingestService = createWithProcessors();
         PipelineConfiguration config = new PipelineConfiguration(
-            "_id",new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}"), XContentType.JSON
+            "_id",
+            new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}"),
+            XContentType.JSON
         );
         IngestMetadata ingestMetadata = new IngestMetadata(Collections.singletonMap("_id", config));
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build();
         ClusterState previousClusterState = clusterState;
-        clusterState = ClusterState.builder(clusterState).metadata(Metadata.builder()
-            .putCustom(IngestMetadata.TYPE, ingestMetadata)).build();
+        clusterState = ClusterState.builder(clusterState)
+            .metadata(Metadata.builder().putCustom(IngestMetadata.TYPE, ingestMetadata))
+            .build();
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
         assertThat(ingestService.getPipeline("_id"), notNullValue());
 
@@ -285,8 +324,11 @@ public class IngestServiceTests extends ESTestCase {
 
     public void testValidateNoIngestInfo() throws Exception {
         IngestService ingestService = createWithProcessors();
-        PutPipelineRequest putRequest = new PutPipelineRequest("_id", new BytesArray(
-            "{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}"), XContentType.JSON);
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            "_id",
+            new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}"),
+            XContentType.JSON
+        );
 
         var pipelineConfig = XContentHelper.convertToMap(putRequest.getSource(), false, putRequest.getXContentType()).v2();
         Exception e = expectThrows(
@@ -295,8 +337,13 @@ public class IngestServiceTests extends ESTestCase {
         );
         assertEquals("Ingest info is empty", e.getMessage());
 
-        DiscoveryNode discoveryNode = new DiscoveryNode("_node_id", buildNewFakeTransportAddress(),
-            emptyMap(), emptySet(), Version.CURRENT);
+        DiscoveryNode discoveryNode = new DiscoveryNode(
+            "_node_id",
+            buildNewFakeTransportAddress(),
+            emptyMap(),
+            emptySet(),
+            Version.CURRENT
+        );
         IngestInfo ingestInfo = new IngestInfo(Collections.singletonList(new ProcessorInfo("set")));
         ingestService.validatePipeline(Collections.singletonMap(discoveryNode, ingestInfo), putRequest.getId(), pipelineConfig);
     }
@@ -338,7 +385,8 @@ public class IngestServiceTests extends ESTestCase {
         if (defaultIndices.size() > 0) {
             assertThat(
                 e.getMessage(),
-                containsString(String.format(
+                containsString(
+                    String.format(
                         Locale.ROOT,
                         "default pipeline for %s index(es) including [%s]",
                         defaultIndices.size(),
@@ -355,7 +403,8 @@ public class IngestServiceTests extends ESTestCase {
         if (finalIndices.size() > 0) {
             assertThat(
                 e.getMessage(),
-                containsString(String.format(
+                containsString(
+                    String.format(
                         Locale.ROOT,
                         "final pipeline for %s index(es) including [%s]",
                         finalIndices.size(),
@@ -373,10 +422,14 @@ public class IngestServiceTests extends ESTestCase {
         assertThat(pipeline, nullValue());
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build(); // Start empty
 
-        PutPipelineRequest putRequest = new PutPipelineRequest("_id", new BytesArray(
-            "{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\", \"tag\": \"tag1\"}}," +
-                "{\"remove\" : {\"field\": \"_field\", \"tag\": \"tag2\"}}]}"),
-            XContentType.JSON);
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            "_id",
+            new BytesArray(
+                "{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\", \"tag\": \"tag1\"}},"
+                    + "{\"remove\" : {\"field\": \"_field\", \"tag\": \"tag2\"}}]}"
+            ),
+            XContentType.JSON
+        );
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
@@ -390,8 +443,10 @@ public class IngestServiceTests extends ESTestCase {
 
         assertThat(ingestService.getProcessorsInPipeline(id, ConditionalProcessor.class).size(), equalTo(0));
 
-        IllegalArgumentException e = expectThrows(IllegalArgumentException.class,
-            () -> ingestService.getProcessorsInPipeline("fakeID", Processor.class));
+        IllegalArgumentException e = expectThrows(
+            IllegalArgumentException.class,
+            () -> ingestService.getProcessorsInPipeline("fakeID", Processor.class)
+        );
         assertThat("pipeline with id [fakeID] does not exist", equalTo(e.getMessage()));
     }
 
@@ -400,14 +455,20 @@ public class IngestServiceTests extends ESTestCase {
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build();
         ClusterState previousClusterState = clusterState;
 
-        PutPipelineRequest putRequest1 = new PutPipelineRequest("_id1", new BytesArray(
-            "{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\", \"tag\": \"tag1\"}}," +
-                "{\"remove\" : {\"field\": \"_field\", \"tag\": \"tag2\"}}]}"),
-            XContentType.JSON);
+        PutPipelineRequest putRequest1 = new PutPipelineRequest(
+            "_id1",
+            new BytesArray(
+                "{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\", \"tag\": \"tag1\"}},"
+                    + "{\"remove\" : {\"field\": \"_field\", \"tag\": \"tag2\"}}]}"
+            ),
+            XContentType.JSON
+        );
         clusterState = IngestService.innerPut(putRequest1, clusterState);
-        PutPipelineRequest putRequest2 = new PutPipelineRequest("_id2", new BytesArray(
-            "{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\", \"tag\": \"tag2\"}}]}"),
-            XContentType.JSON);
+        PutPipelineRequest putRequest2 = new PutPipelineRequest(
+            "_id2",
+            new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\", \"tag\": \"tag2\"}}]}"),
+            XContentType.JSON
+        );
         clusterState = IngestService.innerPut(putRequest2, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
 
@@ -417,14 +478,14 @@ public class IngestServiceTests extends ESTestCase {
     }
 
     public void testReloadPipeline() throws Exception {
-        boolean[] externalProperty = new boolean[] {false};
+        boolean[] externalProperty = new boolean[] { false };
 
         Map<String, Processor.Factory> processorFactories = new HashMap<>();
         processorFactories.put("set", (factories, tag, description, config) -> {
             String field = (String) config.remove("field");
             String value = (String) config.remove("value");
             if (externalProperty[0]) {
-                return new FakeProcessor("set", tag, description, (ingestDocument) ->ingestDocument.setFieldValue(field, value));
+                return new FakeProcessor("set", tag, description, (ingestDocument) -> ingestDocument.setFieldValue(field, value));
             } else {
                 return new AbstractProcessor(tag, description) {
                     @Override
@@ -444,9 +505,11 @@ public class IngestServiceTests extends ESTestCase {
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build();
         ClusterState previousClusterState = clusterState;
 
-        PutPipelineRequest putRequest1 = new PutPipelineRequest("_id1", new BytesArray(
-            "{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\", \"tag\": \"tag1\"}}]}"),
-            XContentType.JSON);
+        PutPipelineRequest putRequest1 = new PutPipelineRequest(
+            "_id1",
+            new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\", \"tag\": \"tag1\"}}]}"),
+            XContentType.JSON
+        );
         clusterState = IngestService.innerPut(putRequest1, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
 
@@ -474,21 +537,17 @@ public class IngestServiceTests extends ESTestCase {
     public void testGetProcessorsInPipelineComplexConditional() throws Exception {
         LongSupplier relativeTimeProvider = mock(LongSupplier.class);
         String scriptName = "conditionalScript";
-        ScriptService scriptService = new ScriptService(Settings.builder().build(),
+        ScriptService scriptService = new ScriptService(
+            Settings.builder().build(),
             Collections.singletonMap(
                 Script.DEFAULT_SCRIPT_LANG,
-                new MockScriptEngine(
-                    Script.DEFAULT_SCRIPT_LANG,
-                    Collections.singletonMap(
-                        scriptName, ctx -> {
-                            ctx.get("_type");
-                            return true;
-                        }
-                    ),
-                    Collections.emptyMap()
-                )
+                new MockScriptEngine(Script.DEFAULT_SCRIPT_LANG, Collections.singletonMap(scriptName, ctx -> {
+                    ctx.get("_type");
+                    return true;
+                }), Collections.emptyMap())
             ),
-            new HashMap<>(ScriptModule.CORE_CONTEXTS)
+            new HashMap<>(ScriptModule.CORE_CONTEXTS),
+            () -> 1L
         );
 
         Map<String, Processor.Factory> processors = new HashMap<>();
@@ -496,15 +555,19 @@ public class IngestServiceTests extends ESTestCase {
             String field = (String) config.remove("field");
             String value = (String) config.remove("value");
 
-            return new ConditionalProcessor(randomAlphaOfLength(10), null,
-                new Script(
-                    ScriptType.INLINE, Script.DEFAULT_SCRIPT_LANG,
-                    scriptName, Collections.emptyMap()), scriptService,
-                new ConditionalProcessor(randomAlphaOfLength(10) + "-nested", null,
-                    new Script(
-                        ScriptType.INLINE, Script.DEFAULT_SCRIPT_LANG,
-                        scriptName, Collections.emptyMap()), scriptService,
-                    new FakeProcessor("complexSet", tag, description, (ingestDocument) -> ingestDocument.setFieldValue(field, value))));
+            return new ConditionalProcessor(
+                randomAlphaOfLength(10),
+                null,
+                new Script(ScriptType.INLINE, Script.DEFAULT_SCRIPT_LANG, scriptName, Collections.emptyMap()),
+                scriptService,
+                new ConditionalProcessor(
+                    randomAlphaOfLength(10) + "-nested",
+                    null,
+                    new Script(ScriptType.INLINE, Script.DEFAULT_SCRIPT_LANG, scriptName, Collections.emptyMap()),
+                    scriptService,
+                    new FakeProcessor("complexSet", tag, description, (ingestDocument) -> ingestDocument.setFieldValue(field, value))
+                )
+            );
         });
 
         IngestService ingestService = createWithProcessors(processors);
@@ -513,8 +576,11 @@ public class IngestServiceTests extends ESTestCase {
         assertThat(pipeline, nullValue());
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build(); // Start empty
 
-        PutPipelineRequest putRequest = new PutPipelineRequest(id,
-            new BytesArray("{\"processors\": [{\"complexSet\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}"), XContentType.JSON);
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            id,
+            new BytesArray("{\"processors\": [{\"complexSet\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}"),
+            XContentType.JSON
+        );
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
@@ -536,8 +602,11 @@ public class IngestServiceTests extends ESTestCase {
         assertThat(pipeline, nullValue());
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build(); // Start empty
 
-        PutPipelineRequest putRequest = new PutPipelineRequest(id,
-            new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}"), XContentType.JSON);
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            id,
+            new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}"),
+            XContentType.JSON
+        );
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
@@ -575,8 +644,11 @@ public class IngestServiceTests extends ESTestCase {
         assertThat(pipeline.getProcessors().size(), equalTo(0));
 
         // overwrite existing pipeline:
-        putRequest =
-            new PutPipelineRequest(id, new BytesArray("{\"processors\": [], \"description\": \"_description\"}"), XContentType.JSON);
+        putRequest = new PutPipelineRequest(
+            id,
+            new BytesArray("{\"processors\": [], \"description\": \"_description\"}"),
+            XContentType.JSON
+        );
         previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
@@ -594,8 +666,11 @@ public class IngestServiceTests extends ESTestCase {
         assertThat(pipeline, nullValue());
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build();
 
-        PutPipelineRequest putRequest =
-            new PutPipelineRequest(id, new BytesArray("{\"description\": \"empty processors\"}"), XContentType.JSON);
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            id,
+            new BytesArray("{\"description\": \"empty processors\"}"),
+            XContentType.JSON
+        );
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         MockLogAppender mockAppender = new MockLogAppender();
@@ -605,7 +680,9 @@ public class IngestServiceTests extends ESTestCase {
                 "test1",
                 IngestService.class.getCanonicalName(),
                 Level.WARN,
-                "failed to update ingest pipelines"));
+                "failed to update ingest pipelines"
+            )
+        );
         Logger ingestLogger = LogManager.getLogger(IngestService.class);
         Loggers.addAppender(ingestLogger, mockAppender);
         try {
@@ -618,8 +695,10 @@ public class IngestServiceTests extends ESTestCase {
         pipeline = ingestService.getPipeline(id);
         assertNotNull(pipeline);
         assertThat(pipeline.getId(), equalTo("_id"));
-        assertThat(pipeline.getDescription(), equalTo("this is a place holder pipeline, because pipeline with" +
-            " id [_id] could not be loaded"));
+        assertThat(
+            pipeline.getDescription(),
+            equalTo("this is a place holder pipeline, because pipeline with" + " id [_id] could not be loaded")
+        );
         assertThat(pipeline.getProcessors().size(), equalTo(1));
         assertNull(pipeline.getProcessors().get(0).getTag());
         assertThat(pipeline.getProcessors().get(0).getType(), equalTo("unknown"));
@@ -628,17 +707,16 @@ public class IngestServiceTests extends ESTestCase {
     public void testDeleteUsingWildcard() {
         IngestService ingestService = createWithProcessors();
         HashMap<String, PipelineConfiguration> pipelines = new HashMap<>();
-        BytesArray definition = new BytesArray(
-            "{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}"
-        );
+        BytesArray definition = new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}");
         pipelines.put("p1", new PipelineConfiguration("p1", definition, XContentType.JSON));
         pipelines.put("p2", new PipelineConfiguration("p2", definition, XContentType.JSON));
         pipelines.put("q1", new PipelineConfiguration("q1", definition, XContentType.JSON));
         IngestMetadata ingestMetadata = new IngestMetadata(pipelines);
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build();
         ClusterState previousClusterState = clusterState;
-        clusterState = ClusterState.builder(clusterState).metadata(Metadata.builder()
-            .putCustom(IngestMetadata.TYPE, ingestMetadata)).build();
+        clusterState = ClusterState.builder(clusterState)
+            .metadata(Metadata.builder().putCustom(IngestMetadata.TYPE, ingestMetadata))
+            .build();
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
         assertThat(ingestService.getPipeline("p1"), notNullValue());
         assertThat(ingestService.getPipeline("p2"), notNullValue());
@@ -677,15 +755,14 @@ public class IngestServiceTests extends ESTestCase {
     public void testDeleteWithExistingUnmatchedPipelines() {
         IngestService ingestService = createWithProcessors();
         HashMap<String, PipelineConfiguration> pipelines = new HashMap<>();
-        BytesArray definition = new BytesArray(
-            "{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}"
-        );
+        BytesArray definition = new BytesArray("{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\"}}]}");
         pipelines.put("p1", new PipelineConfiguration("p1", definition, XContentType.JSON));
         IngestMetadata ingestMetadata = new IngestMetadata(pipelines);
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build();
         ClusterState previousClusterState = clusterState;
-        clusterState = ClusterState.builder(clusterState).metadata(Metadata.builder()
-            .putCustom(IngestMetadata.TYPE, ingestMetadata)).build();
+        clusterState = ClusterState.builder(clusterState)
+            .metadata(Metadata.builder().putCustom(IngestMetadata.TYPE, ingestMetadata))
+            .build();
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
         assertThat(ingestService.getPipeline("p1"), notNullValue());
 
@@ -767,12 +844,8 @@ public class IngestServiceTests extends ESTestCase {
 
     public void testGetPipelines() {
         Map<String, PipelineConfiguration> configs = new HashMap<>();
-        configs.put("_id1", new PipelineConfiguration(
-            "_id1", new BytesArray("{\"processors\": []}"), XContentType.JSON
-        ));
-        configs.put("_id2", new PipelineConfiguration(
-            "_id2", new BytesArray("{\"processors\": []}"), XContentType.JSON
-        ));
+        configs.put("_id1", new PipelineConfiguration("_id1", new BytesArray("{\"processors\": []}"), XContentType.JSON));
+        configs.put("_id2", new PipelineConfiguration("_id2", new BytesArray("{\"processors\": []}"), XContentType.JSON));
 
         assertThat(IngestService.innerGetPipelines(null, "_id1").isEmpty(), is(true));
 
@@ -808,16 +881,18 @@ public class IngestServiceTests extends ESTestCase {
 
     public void testValidate() throws Exception {
         IngestService ingestService = createWithProcessors();
-        PutPipelineRequest putRequest = new PutPipelineRequest("_id", new BytesArray(
-            "{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\", \"tag\": \"tag1\"}}," +
-                "{\"remove\" : {\"field\": \"_field\", \"tag\": \"tag2\"}}]}"),
-            XContentType.JSON);
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            "_id",
+            new BytesArray(
+                "{\"processors\": [{\"set\" : {\"field\": \"_field\", \"value\": \"_value\", \"tag\": \"tag1\"}},"
+                    + "{\"remove\" : {\"field\": \"_field\", \"tag\": \"tag2\"}}]}"
+            ),
+            XContentType.JSON
+        );
         var pipelineConfig = XContentHelper.convertToMap(putRequest.getSource(), false, putRequest.getXContentType()).v2();
 
-        DiscoveryNode node1 = new DiscoveryNode("_node_id1", buildNewFakeTransportAddress(),
-            emptyMap(), emptySet(), Version.CURRENT);
-        DiscoveryNode node2 = new DiscoveryNode("_node_id2", buildNewFakeTransportAddress(),
-            emptyMap(), emptySet(), Version.CURRENT);
+        DiscoveryNode node1 = new DiscoveryNode("_node_id1", buildNewFakeTransportAddress(), emptyMap(), emptySet(), Version.CURRENT);
+        DiscoveryNode node2 = new DiscoveryNode("_node_id2", buildNewFakeTransportAddress(), emptyMap(), emptySet(), Version.CURRENT);
         Map<DiscoveryNode, IngestInfo> ingestInfos = new HashMap<>();
         ingestInfos.put(node1, new IngestInfo(Arrays.asList(new ProcessorInfo("set"), new ProcessorInfo("remove"))));
         ingestInfos.put(node2, new IngestInfo(Arrays.asList(new ProcessorInfo("set"))));
@@ -836,8 +911,8 @@ public class IngestServiceTests extends ESTestCase {
     }
 
     public void testExecuteIndexPipelineExistsButFailedParsing() {
-        IngestService ingestService = createWithProcessors(Collections.singletonMap(
-            "mock", (factories, tag, description, config) -> new AbstractProcessor("mock", "description") {
+        IngestService ingestService = createWithProcessors(
+            Collections.singletonMap("mock", (factories, tag, description, config) -> new AbstractProcessor("mock", "description") {
                 @Override
                 public IngestDocument execute(IngestDocument ingestDocument) {
                     throw new IllegalStateException("error");
@@ -847,23 +922,27 @@ public class IngestServiceTests extends ESTestCase {
                 public String getType() {
                     return null;
                 }
-            }
-        ));
+            })
+        );
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build(); // Start empty
         String id = "_id";
-        PutPipelineRequest putRequest = new PutPipelineRequest(id,
-            new BytesArray("{\"processors\": [{\"mock\" : {}}]}"), XContentType.JSON);
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            id,
+            new BytesArray("{\"processors\": [{\"mock\" : {}}]}"),
+            XContentType.JSON
+        );
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
         final SetOnce<Boolean> failure = new SetOnce<>();
 
         BulkRequest bulkRequest = new BulkRequest();
-        final IndexRequest indexRequest1 =
-            new IndexRequest("_index").id("_id1").source(emptyMap()).setPipeline("_none").setFinalPipeline("_none");
+        final IndexRequest indexRequest1 = new IndexRequest("_index").id("_id1")
+            .source(emptyMap())
+            .setPipeline("_none")
+            .setFinalPipeline("_none");
         bulkRequest.add(indexRequest1);
-        IndexRequest indexRequest2 =
-            new IndexRequest("_index").id("_id2").source(emptyMap()).setPipeline(id).setFinalPipeline("_none");
+        IndexRequest indexRequest2 = new IndexRequest("_index").id("_id2").source(emptyMap()).setPipeline(id).setFinalPipeline("_none");
         bulkRequest.add(indexRequest2);
 
         final BiConsumer<Integer, Exception> failureHandler = (slot, e) -> {
@@ -876,19 +955,29 @@ public class IngestServiceTests extends ESTestCase {
         @SuppressWarnings("unchecked")
         final BiConsumer<Thread, Exception> completionHandler = mock(BiConsumer.class);
 
-        ingestService.executeBulkRequest(bulkRequest.numberOfActions(), bulkRequest.requests(), failureHandler,
-            completionHandler, indexReq -> {}, Names.WRITE);
+        ingestService.executeBulkRequest(
+            bulkRequest.numberOfActions(),
+            bulkRequest.requests(),
+            failureHandler,
+            completionHandler,
+            indexReq -> {},
+            Names.WRITE
+        );
 
         assertTrue(failure.get());
         verify(completionHandler, times(1)).accept(Thread.currentThread(), null);
     }
 
     public void testExecuteBulkPipelineDoesNotExist() {
-        IngestService ingestService = createWithProcessors(Collections.singletonMap(
-            "mock", (factories, tag, description, config) -> mockCompoundProcessor()));
+        IngestService ingestService = createWithProcessors(
+            Collections.singletonMap("mock", (factories, tag, description, config) -> mockCompoundProcessor())
+        );
 
-        PutPipelineRequest putRequest = new PutPipelineRequest("_id",
-            new BytesArray("{\"processors\": [{\"mock\" : {}}]}"), XContentType.JSON);
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            "_id",
+            new BytesArray("{\"processors\": [{\"mock\" : {}}]}"),
+            XContentType.JSON
+        );
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build(); // Start empty
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
@@ -896,21 +985,30 @@ public class IngestServiceTests extends ESTestCase {
 
         BulkRequest bulkRequest = new BulkRequest();
 
-        IndexRequest indexRequest1 =
-            new IndexRequest("_index").id("_id1").source(emptyMap()).setPipeline("_none").setFinalPipeline("_none");
+        IndexRequest indexRequest1 = new IndexRequest("_index").id("_id1")
+            .source(emptyMap())
+            .setPipeline("_none")
+            .setFinalPipeline("_none");
         bulkRequest.add(indexRequest1);
-        IndexRequest indexRequest2 =
-            new IndexRequest("_index").id("_id2").source(emptyMap()).setPipeline("_id").setFinalPipeline("_none");
+        IndexRequest indexRequest2 = new IndexRequest("_index").id("_id2").source(emptyMap()).setPipeline("_id").setFinalPipeline("_none");
         bulkRequest.add(indexRequest2);
-        IndexRequest indexRequest3 =
-            new IndexRequest("_index").id("_id3").source(Collections.emptyMap()).setPipeline("does_not_exist").setFinalPipeline("_none");
+        IndexRequest indexRequest3 = new IndexRequest("_index").id("_id3")
+            .source(Collections.emptyMap())
+            .setPipeline("does_not_exist")
+            .setFinalPipeline("_none");
         bulkRequest.add(indexRequest3);
         @SuppressWarnings("unchecked")
         BiConsumer<Integer, Exception> failureHandler = mock(BiConsumer.class);
         @SuppressWarnings("unchecked")
         final BiConsumer<Thread, Exception> completionHandler = mock(BiConsumer.class);
-        ingestService.executeBulkRequest(bulkRequest.numberOfActions(), bulkRequest.requests(), failureHandler,
-            completionHandler, indexReq -> {}, Names.WRITE);
+        ingestService.executeBulkRequest(
+            bulkRequest.numberOfActions(),
+            bulkRequest.requests(),
+            failureHandler,
+            completionHandler,
+            indexReq -> {},
+            Names.WRITE
+        );
         verify(failureHandler, times(1)).accept(
             argThat(item -> item == 2),
             argThat(iae -> "pipeline with id [does_not_exist] does not exist".equals(iae.getMessage()))
@@ -919,74 +1017,119 @@ public class IngestServiceTests extends ESTestCase {
     }
 
     public void testExecuteSuccess() {
-        IngestService ingestService = createWithProcessors(Collections.singletonMap(
-            "mock", (factories, tag, description, config) -> mockCompoundProcessor()));
-        PutPipelineRequest putRequest = new PutPipelineRequest("_id",
-            new BytesArray("{\"processors\": [{\"mock\" : {}}]}"), XContentType.JSON);
+        IngestService ingestService = createWithProcessors(
+            Collections.singletonMap("mock", (factories, tag, description, config) -> mockCompoundProcessor())
+        );
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            "_id",
+            new BytesArray("{\"processors\": [{\"mock\" : {}}]}"),
+            XContentType.JSON
+        );
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build(); // Start empty
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
-        final IndexRequest indexRequest =
-            new IndexRequest("_index").id("_id").source(emptyMap()).setPipeline("_id").setFinalPipeline("_none");
+        final IndexRequest indexRequest = new IndexRequest("_index").id("_id")
+            .source(emptyMap())
+            .setPipeline("_id")
+            .setFinalPipeline("_none");
         @SuppressWarnings("unchecked")
         final BiConsumer<Integer, Exception> failureHandler = mock(BiConsumer.class);
         @SuppressWarnings("unchecked")
         final BiConsumer<Thread, Exception> completionHandler = mock(BiConsumer.class);
-        ingestService.executeBulkRequest(1, Collections.singletonList(indexRequest), failureHandler, completionHandler, indexReq -> {},
-            Names.WRITE);
+        ingestService.executeBulkRequest(
+            1,
+            Collections.singletonList(indexRequest),
+            failureHandler,
+            completionHandler,
+            indexReq -> {},
+            Names.WRITE
+        );
         verify(failureHandler, never()).accept(any(), any());
         verify(completionHandler, times(1)).accept(Thread.currentThread(), null);
     }
 
     public void testDynamicTemplates() throws Exception {
-        IngestService ingestService = createWithProcessors(Collections.singletonMap(
-            "set", (factories, tag, description, config) ->
-                new FakeProcessor("set", "", "", (ingestDocument) -> ingestDocument.setFieldValue("_dynamic_templates",
-                    Map.of("foo", "bar", "foo.bar", "baz")))));
-        PutPipelineRequest putRequest = new PutPipelineRequest("_id",
-            new BytesArray("{\"processors\": [{\"set\" : {}}]}"), XContentType.JSON);
+        IngestService ingestService = createWithProcessors(
+            Collections.singletonMap(
+                "set",
+                (factories, tag, description, config) -> new FakeProcessor(
+                    "set",
+                    "",
+                    "",
+                    (ingestDocument) -> ingestDocument.setFieldValue("_dynamic_templates", Map.of("foo", "bar", "foo.bar", "baz"))
+                )
+            )
+        );
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            "_id",
+            new BytesArray("{\"processors\": [{\"set\" : {}}]}"),
+            XContentType.JSON
+        );
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build(); // Start empty
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
-        final IndexRequest indexRequest =
-            new IndexRequest("_index").id("_id").source(emptyMap()).setPipeline("_id").setFinalPipeline("_none");
+        final IndexRequest indexRequest = new IndexRequest("_index").id("_id")
+            .source(emptyMap())
+            .setPipeline("_id")
+            .setFinalPipeline("_none");
         CountDownLatch latch = new CountDownLatch(1);
-        final BiConsumer<Integer, Exception> failureHandler = (v, e) -> { throw new AssertionError("must never fail", e);};
+        final BiConsumer<Integer, Exception> failureHandler = (v, e) -> { throw new AssertionError("must never fail", e); };
         final BiConsumer<Thread, Exception> completionHandler = (t, e) -> latch.countDown();
-        ingestService.executeBulkRequest(1, Collections.singletonList(indexRequest), failureHandler, completionHandler,
-            indexReq -> {}, Names.WRITE);
+        ingestService.executeBulkRequest(
+            1,
+            Collections.singletonList(indexRequest),
+            failureHandler,
+            completionHandler,
+            indexReq -> {},
+            Names.WRITE
+        );
         latch.await();
         assertThat(indexRequest.getDynamicTemplates(), equalTo(Map.of("foo", "bar", "foo.bar", "baz")));
     }
 
     public void testExecuteEmptyPipeline() throws Exception {
         IngestService ingestService = createWithProcessors(emptyMap());
-        PutPipelineRequest putRequest =
-            new PutPipelineRequest("_id", new BytesArray("{\"processors\": [], \"description\": \"_description\"}"), XContentType.JSON);
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            "_id",
+            new BytesArray("{\"processors\": [], \"description\": \"_description\"}"),
+            XContentType.JSON
+        );
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build(); // Start empty
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
-        final IndexRequest indexRequest =
-            new IndexRequest("_index").id("_id").source(emptyMap()).setPipeline("_id").setFinalPipeline("_none");
+        final IndexRequest indexRequest = new IndexRequest("_index").id("_id")
+            .source(emptyMap())
+            .setPipeline("_id")
+            .setFinalPipeline("_none");
         @SuppressWarnings("unchecked")
         final BiConsumer<Integer, Exception> failureHandler = mock(BiConsumer.class);
         @SuppressWarnings("unchecked")
         final BiConsumer<Thread, Exception> completionHandler = mock(BiConsumer.class);
-        ingestService.executeBulkRequest(1, Collections.singletonList(indexRequest), failureHandler, completionHandler, indexReq -> {},
-            Names.WRITE);
+        ingestService.executeBulkRequest(
+            1,
+            Collections.singletonList(indexRequest),
+            failureHandler,
+            completionHandler,
+            indexReq -> {},
+            Names.WRITE
+        );
         verify(failureHandler, never()).accept(any(), any());
         verify(completionHandler, times(1)).accept(Thread.currentThread(), null);
     }
 
     public void testExecutePropagateAllMetadataUpdates() throws Exception {
         final CompoundProcessor processor = mockCompoundProcessor();
-        IngestService ingestService = createWithProcessors(Collections.singletonMap(
-            "mock", (factories, tag, description, config) -> processor));
-        PutPipelineRequest putRequest = new PutPipelineRequest("_id",
-            new BytesArray("{\"processors\": [{\"mock\" : {}}]}"), XContentType.JSON);
+        IngestService ingestService = createWithProcessors(
+            Collections.singletonMap("mock", (factories, tag, description, config) -> processor)
+        );
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            "_id",
+            new BytesArray("{\"processors\": [{\"mock\" : {}}]}"),
+            XContentType.JSON
+        );
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build(); // Start empty
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
@@ -1018,14 +1161,22 @@ public class IngestServiceTests extends ESTestCase {
             handler.accept(ingestDocument, null);
             return null;
         }).when(processor).execute(any(), any());
-        final IndexRequest indexRequest =
-            new IndexRequest("_index").id("_id").source(emptyMap()).setPipeline("_id").setFinalPipeline("_none");
+        final IndexRequest indexRequest = new IndexRequest("_index").id("_id")
+            .source(emptyMap())
+            .setPipeline("_id")
+            .setFinalPipeline("_none");
         @SuppressWarnings("unchecked")
         final BiConsumer<Integer, Exception> failureHandler = mock(BiConsumer.class);
         @SuppressWarnings("unchecked")
         final BiConsumer<Thread, Exception> completionHandler = mock(BiConsumer.class);
-        ingestService.executeBulkRequest(1, Collections.singletonList(indexRequest), failureHandler, completionHandler, indexReq -> {},
-            Names.WRITE);
+        ingestService.executeBulkRequest(
+            1,
+            Collections.singletonList(indexRequest),
+            failureHandler,
+            completionHandler,
+            indexReq -> {},
+            Names.WRITE
+        );
         verify(processor).execute(any(), any());
         verify(failureHandler, never()).accept(any(), any());
         verify(completionHandler, times(1)).accept(Thread.currentThread(), null);
@@ -1040,25 +1191,36 @@ public class IngestServiceTests extends ESTestCase {
 
     public void testExecuteFailure() throws Exception {
         final CompoundProcessor processor = mockCompoundProcessor();
-        IngestService ingestService = createWithProcessors(Collections.singletonMap(
-            "mock", (factories, tag, description, config) -> processor));
-        PutPipelineRequest putRequest = new PutPipelineRequest("_id",
-            new BytesArray("{\"processors\": [{\"mock\" : {}}]}"), XContentType.JSON);
+        IngestService ingestService = createWithProcessors(
+            Collections.singletonMap("mock", (factories, tag, description, config) -> processor)
+        );
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            "_id",
+            new BytesArray("{\"processors\": [{\"mock\" : {}}]}"),
+            XContentType.JSON
+        );
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build(); // Start empty
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
-        final IndexRequest indexRequest =
-            new IndexRequest("_index").id("_id").source(emptyMap()).setPipeline("_id").setFinalPipeline("_none");
-        doThrow(new RuntimeException())
-            .when(processor)
+        final IndexRequest indexRequest = new IndexRequest("_index").id("_id")
+            .source(emptyMap())
+            .setPipeline("_id")
+            .setFinalPipeline("_none");
+        doThrow(new RuntimeException()).when(processor)
             .execute(eqIndexTypeId(indexRequest.version(), indexRequest.versionType(), emptyMap()), any());
         @SuppressWarnings("unchecked")
         final BiConsumer<Integer, Exception> failureHandler = mock(BiConsumer.class);
         @SuppressWarnings("unchecked")
         final BiConsumer<Thread, Exception> completionHandler = mock(BiConsumer.class);
-        ingestService.executeBulkRequest(1, Collections.singletonList(indexRequest), failureHandler, completionHandler, indexReq -> {},
-            Names.WRITE);
+        ingestService.executeBulkRequest(
+            1,
+            Collections.singletonList(indexRequest),
+            failureHandler,
+            completionHandler,
+            indexReq -> {},
+            Names.WRITE
+        );
         verify(processor).execute(eqIndexTypeId(indexRequest.version(), indexRequest.versionType(), emptyMap()), any());
         verify(failureHandler, times(1)).accept(eq(0), any(RuntimeException.class));
         verify(completionHandler, times(1)).accept(Thread.currentThread(), null);
@@ -1085,23 +1247,38 @@ public class IngestServiceTests extends ESTestCase {
         }).when(onFailureProcessor).execute(eqIndexTypeId(emptyMap()), any());
 
         final CompoundProcessor compoundProcessor = new CompoundProcessor(
-            false, Collections.singletonList(processor), Collections.singletonList(new CompoundProcessor(onFailureProcessor)));
-        IngestService ingestService = createWithProcessors(Collections.singletonMap(
-            "mock", (factories, tag, description, config) -> compoundProcessor));
-        PutPipelineRequest putRequest = new PutPipelineRequest("_id",
-            new BytesArray("{\"processors\": [{\"mock\" : {}}]}"), XContentType.JSON);
+            false,
+            Collections.singletonList(processor),
+            Collections.singletonList(new CompoundProcessor(onFailureProcessor))
+        );
+        IngestService ingestService = createWithProcessors(
+            Collections.singletonMap("mock", (factories, tag, description, config) -> compoundProcessor)
+        );
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            "_id",
+            new BytesArray("{\"processors\": [{\"mock\" : {}}]}"),
+            XContentType.JSON
+        );
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build(); // Start empty
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
-        final IndexRequest indexRequest =
-            new IndexRequest("_index").id("_id").source(emptyMap()).setPipeline("_id").setFinalPipeline("_none");
+        final IndexRequest indexRequest = new IndexRequest("_index").id("_id")
+            .source(emptyMap())
+            .setPipeline("_id")
+            .setFinalPipeline("_none");
         @SuppressWarnings("unchecked")
         final BiConsumer<Integer, Exception> failureHandler = mock(BiConsumer.class);
         @SuppressWarnings("unchecked")
         final BiConsumer<Thread, Exception> completionHandler = mock(BiConsumer.class);
-        ingestService.executeBulkRequest(1, Collections.singletonList(indexRequest), failureHandler, completionHandler, indexReq -> {},
-            Names.WRITE);
+        ingestService.executeBulkRequest(
+            1,
+            Collections.singletonList(indexRequest),
+            failureHandler,
+            completionHandler,
+            indexReq -> {},
+            Names.WRITE
+        );
         verify(failureHandler, never()).accept(eq(0), any(IngestProcessorException.class));
         verify(completionHandler, times(1)).accept(Thread.currentThread(), null);
     }
@@ -1115,32 +1292,42 @@ public class IngestServiceTests extends ESTestCase {
         final CompoundProcessor compoundProcessor = new CompoundProcessor(
             false,
             Collections.singletonList(processor),
-            Collections.singletonList(new CompoundProcessor(false, processors, onFailureProcessors)));
-        IngestService ingestService = createWithProcessors(Collections.singletonMap(
-            "mock", (factories, tag, description, config) -> compoundProcessor));
-        PutPipelineRequest putRequest = new PutPipelineRequest("_id",
-            new BytesArray("{\"processors\": [{\"mock\" : {}}]}"), XContentType.JSON);
+            Collections.singletonList(new CompoundProcessor(false, processors, onFailureProcessors))
+        );
+        IngestService ingestService = createWithProcessors(
+            Collections.singletonMap("mock", (factories, tag, description, config) -> compoundProcessor)
+        );
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            "_id",
+            new BytesArray("{\"processors\": [{\"mock\" : {}}]}"),
+            XContentType.JSON
+        );
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build(); // Start empty
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
-        final IndexRequest indexRequest =
-            new IndexRequest("_index").id("_id").source(emptyMap()).setPipeline("_id").setFinalPipeline("_none");
-        doThrow(new RuntimeException())
-            .when(onFailureOnFailureProcessor)
+        final IndexRequest indexRequest = new IndexRequest("_index").id("_id")
+            .source(emptyMap())
+            .setPipeline("_id")
+            .setFinalPipeline("_none");
+        doThrow(new RuntimeException()).when(onFailureOnFailureProcessor)
             .execute(eqIndexTypeId(indexRequest.version(), indexRequest.versionType(), emptyMap()), any());
-        doThrow(new RuntimeException())
-            .when(onFailureProcessor)
+        doThrow(new RuntimeException()).when(onFailureProcessor)
             .execute(eqIndexTypeId(indexRequest.version(), indexRequest.versionType(), emptyMap()), any());
-        doThrow(new RuntimeException())
-            .when(processor)
+        doThrow(new RuntimeException()).when(processor)
             .execute(eqIndexTypeId(indexRequest.version(), indexRequest.versionType(), emptyMap()), any());
         @SuppressWarnings("unchecked")
         final BiConsumer<Integer, Exception> failureHandler = mock(BiConsumer.class);
         @SuppressWarnings("unchecked")
         final BiConsumer<Thread, Exception> completionHandler = mock(BiConsumer.class);
-        ingestService.executeBulkRequest(1, Collections.singletonList(indexRequest), failureHandler, completionHandler, indexReq -> {},
-            Names.WRITE);
+        ingestService.executeBulkRequest(
+            1,
+            Collections.singletonList(indexRequest),
+            failureHandler,
+            completionHandler,
+            indexReq -> {},
+            Names.WRITE
+        );
         verify(processor).execute(eqIndexTypeId(indexRequest.version(), indexRequest.versionType(), emptyMap()), any());
         verify(failureHandler, times(1)).accept(eq(0), any(RuntimeException.class));
         verify(completionHandler, times(1)).accept(Thread.currentThread(), null);
@@ -1178,10 +1365,14 @@ public class IngestServiceTests extends ESTestCase {
             handler.accept(null, error);
             return null;
         }).when(processor).execute(any(), any());
-        IngestService ingestService = createWithProcessors(Collections.singletonMap(
-            "mock", (factories, tag, description, config) -> processor));
-        PutPipelineRequest putRequest = new PutPipelineRequest("_id",
-            new BytesArray("{\"processors\": [{\"mock\" : {}}]}"), XContentType.JSON);
+        IngestService ingestService = createWithProcessors(
+            Collections.singletonMap("mock", (factories, tag, description, config) -> processor)
+        );
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            "_id",
+            new BytesArray("{\"processors\": [{\"mock\" : {}}]}"),
+            XContentType.JSON
+        );
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build(); // Start empty
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
@@ -1191,8 +1382,14 @@ public class IngestServiceTests extends ESTestCase {
         BiConsumer<Integer, Exception> requestItemErrorHandler = mock(BiConsumer.class);
         @SuppressWarnings("unchecked")
         final BiConsumer<Thread, Exception> completionHandler = mock(BiConsumer.class);
-        ingestService.executeBulkRequest(numRequest, bulkRequest.requests(), requestItemErrorHandler, completionHandler, indexReq -> {},
-            Names.WRITE);
+        ingestService.executeBulkRequest(
+            numRequest,
+            bulkRequest.requests(),
+            requestItemErrorHandler,
+            completionHandler,
+            indexReq -> {},
+            Names.WRITE
+        );
 
         verify(requestItemErrorHandler, times(numIndexRequests)).accept(anyInt(), argThat(e -> e.getCause().equals(error)));
         verify(completionHandler, times(1)).accept(Thread.currentThread(), null);
@@ -1203,9 +1400,9 @@ public class IngestServiceTests extends ESTestCase {
         String pipelineId = "_id";
 
         // Test to make sure that ingest respects content types other than the default index content type
-        XContentType xContentType = randomFrom(Arrays.stream(XContentType.values())
-                .filter(t -> Requests.INDEX_CONTENT_TYPE.equals(t) == false)
-                .collect(Collectors.toList()));
+        XContentType xContentType = randomFrom(
+            Arrays.stream(XContentType.values()).filter(t -> Requests.INDEX_CONTENT_TYPE.equals(t) == false).collect(Collectors.toList())
+        );
 
         logger.info("Using [{}], not randomly determined default [{}]", xContentType, Requests.INDEX_CONTENT_TYPE);
         int numRequest = scaledRandomIntBetween(8, 64);
@@ -1228,8 +1425,11 @@ public class IngestServiceTests extends ESTestCase {
         map.put("mock", (factories, tag, description, config) -> processor);
 
         IngestService ingestService = createWithProcessors(map);
-        PutPipelineRequest putRequest = new PutPipelineRequest("_id",
-            new BytesArray("{\"processors\": [{\"mock\": {}}], \"description\": \"_description\"}"), XContentType.JSON);
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            "_id",
+            new BytesArray("{\"processors\": [{\"mock\": {}}], \"description\": \"_description\"}"),
+            XContentType.JSON
+        );
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build();
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
@@ -1239,8 +1439,14 @@ public class IngestServiceTests extends ESTestCase {
         BiConsumer<Integer, Exception> requestItemErrorHandler = mock(BiConsumer.class);
         @SuppressWarnings("unchecked")
         final BiConsumer<Thread, Exception> completionHandler = mock(BiConsumer.class);
-        ingestService.executeBulkRequest(numRequest, bulkRequest.requests(), requestItemErrorHandler, completionHandler, indexReq -> {},
-            Names.WRITE);
+        ingestService.executeBulkRequest(
+            numRequest,
+            bulkRequest.requests(),
+            requestItemErrorHandler,
+            completionHandler,
+            indexReq -> {},
+            Names.WRITE
+        );
 
         verify(requestItemErrorHandler, never()).accept(any(), any());
         verify(completionHandler, times(1)).accept(Thread.currentThread(), null);
@@ -1257,7 +1463,7 @@ public class IngestServiceTests extends ESTestCase {
         when(processor.getType()).thenReturn("mock");
         when(processor.getTag()).thenReturn("mockTag");
         when(processorFailure.getType()).thenReturn("failure-mock");
-        //avoid returning null and dropping the document
+        // avoid returning null and dropping the document
         doAnswer(args -> {
             @SuppressWarnings("unchecked")
             BiConsumer<IngestDocument, Exception> handler = (BiConsumer) args.getArguments()[1];
@@ -1279,104 +1485,136 @@ public class IngestServiceTests extends ESTestCase {
         assertThat(initialStats.getPipelineStats().size(), equalTo(0));
         assertStats(initialStats.getTotalStats(), 0, 0, 0);
 
-        PutPipelineRequest putRequest = new PutPipelineRequest("_id1",
-            new BytesArray("{\"processors\": [{\"mock\" : {}}]}"), XContentType.JSON);
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            "_id1",
+            new BytesArray("{\"processors\": [{\"mock\" : {}}]}"),
+            XContentType.JSON
+        );
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build(); // Start empty
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
-        putRequest = new PutPipelineRequest("_id2",
-            new BytesArray("{\"processors\": [{\"mock\" : {}}]}"), XContentType.JSON);
+        putRequest = new PutPipelineRequest("_id2", new BytesArray("{\"processors\": [{\"mock\" : {}}]}"), XContentType.JSON);
         previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
 
-        @SuppressWarnings("unchecked") final BiConsumer<Integer, Exception> failureHandler = mock(BiConsumer.class);
-        @SuppressWarnings("unchecked") final BiConsumer<Thread, Exception> completionHandler = mock(BiConsumer.class);
+        @SuppressWarnings("unchecked")
+        final BiConsumer<Integer, Exception> failureHandler = mock(BiConsumer.class);
+        @SuppressWarnings("unchecked")
+        final BiConsumer<Thread, Exception> completionHandler = mock(BiConsumer.class);
 
         final IndexRequest indexRequest = new IndexRequest("_index");
         indexRequest.setPipeline("_id1").setFinalPipeline("_none");
         indexRequest.source(randomAlphaOfLength(10), randomAlphaOfLength(10));
-        ingestService.executeBulkRequest(1, Collections.singletonList(indexRequest), failureHandler, completionHandler, indexReq -> {},
-            Names.WRITE);
+        ingestService.executeBulkRequest(
+            1,
+            Collections.singletonList(indexRequest),
+            failureHandler,
+            completionHandler,
+            indexReq -> {},
+            Names.WRITE
+        );
         final IngestStats afterFirstRequestStats = ingestService.stats();
         assertThat(afterFirstRequestStats.getPipelineStats().size(), equalTo(2));
 
         afterFirstRequestStats.getProcessorStats().get("_id1").forEach(p -> assertEquals(p.getName(), "mock:mockTag"));
         afterFirstRequestStats.getProcessorStats().get("_id2").forEach(p -> assertEquals(p.getName(), "mock:mockTag"));
 
-        //total
-        assertStats(afterFirstRequestStats.getTotalStats(), 1, 0 ,0);
-        //pipeline
+        // total
+        assertStats(afterFirstRequestStats.getTotalStats(), 1, 0, 0);
+        // pipeline
         assertPipelineStats(afterFirstRequestStats.getPipelineStats(), "_id1", 1, 0, 0);
         assertPipelineStats(afterFirstRequestStats.getPipelineStats(), "_id2", 0, 0, 0);
-        //processor
+        // processor
         assertProcessorStats(0, afterFirstRequestStats, "_id1", 1, 0, 0);
         assertProcessorStats(0, afterFirstRequestStats, "_id2", 0, 0, 0);
 
-
         indexRequest.setPipeline("_id2");
-        ingestService.executeBulkRequest(1, Collections.singletonList(indexRequest), failureHandler, completionHandler, indexReq -> {},
-            Names.WRITE);
+        ingestService.executeBulkRequest(
+            1,
+            Collections.singletonList(indexRequest),
+            failureHandler,
+            completionHandler,
+            indexReq -> {},
+            Names.WRITE
+        );
         final IngestStats afterSecondRequestStats = ingestService.stats();
         assertThat(afterSecondRequestStats.getPipelineStats().size(), equalTo(2));
-        //total
-        assertStats(afterSecondRequestStats.getTotalStats(), 2, 0 ,0);
-        //pipeline
+        // total
+        assertStats(afterSecondRequestStats.getTotalStats(), 2, 0, 0);
+        // pipeline
         assertPipelineStats(afterSecondRequestStats.getPipelineStats(), "_id1", 1, 0, 0);
         assertPipelineStats(afterSecondRequestStats.getPipelineStats(), "_id2", 1, 0, 0);
-        //processor
+        // processor
         assertProcessorStats(0, afterSecondRequestStats, "_id1", 1, 0, 0);
         assertProcessorStats(0, afterSecondRequestStats, "_id2", 1, 0, 0);
 
-        //update cluster state and ensure that new stats are added to old stats
-        putRequest = new PutPipelineRequest("_id1",
-            new BytesArray("{\"processors\": [{\"mock\" : {}}, {\"mock\" : {}}]}"), XContentType.JSON);
+        // update cluster state and ensure that new stats are added to old stats
+        putRequest = new PutPipelineRequest(
+            "_id1",
+            new BytesArray("{\"processors\": [{\"mock\" : {}}, {\"mock\" : {}}]}"),
+            XContentType.JSON
+        );
         previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
         indexRequest.setPipeline("_id1");
-        ingestService.executeBulkRequest(1, Collections.singletonList(indexRequest), failureHandler, completionHandler, indexReq -> {},
-            Names.WRITE);
+        ingestService.executeBulkRequest(
+            1,
+            Collections.singletonList(indexRequest),
+            failureHandler,
+            completionHandler,
+            indexReq -> {},
+            Names.WRITE
+        );
         final IngestStats afterThirdRequestStats = ingestService.stats();
         assertThat(afterThirdRequestStats.getPipelineStats().size(), equalTo(2));
-        //total
-        assertStats(afterThirdRequestStats.getTotalStats(), 3, 0 ,0);
-        //pipeline
+        // total
+        assertStats(afterThirdRequestStats.getTotalStats(), 3, 0, 0);
+        // pipeline
         assertPipelineStats(afterThirdRequestStats.getPipelineStats(), "_id1", 2, 0, 0);
         assertPipelineStats(afterThirdRequestStats.getPipelineStats(), "_id2", 1, 0, 0);
-        //The number of processors for the "id1" pipeline changed, so the per-processor metrics are not carried forward. This is
-        //due to the parallel array's used to identify which metrics to carry forward. With out unique ids or semantic equals for each
-        //processor, parallel arrays are the best option for of carrying forward metrics between pipeline changes. However, in some cases,
-        //like this one it may not readily obvious why the metrics were not carried forward.
+        // The number of processors for the "id1" pipeline changed, so the per-processor metrics are not carried forward. This is
+        // due to the parallel array's used to identify which metrics to carry forward. With out unique ids or semantic equals for each
+        // processor, parallel arrays are the best option for of carrying forward metrics between pipeline changes. However, in some cases,
+        // like this one it may not readily obvious why the metrics were not carried forward.
         assertProcessorStats(0, afterThirdRequestStats, "_id1", 1, 0, 0);
         assertProcessorStats(1, afterThirdRequestStats, "_id1", 1, 0, 0);
         assertProcessorStats(0, afterThirdRequestStats, "_id2", 1, 0, 0);
 
-        //test a failure, and that the processor stats are added from the old stats
-        putRequest = new PutPipelineRequest("_id1",
+        // test a failure, and that the processor stats are added from the old stats
+        putRequest = new PutPipelineRequest(
+            "_id1",
             new BytesArray("{\"processors\": [{\"failure-mock\" : { \"on_failure\": [{\"mock\" : {}}]}}, {\"mock\" : {}}]}"),
-            XContentType.JSON);
+            XContentType.JSON
+        );
         previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
         indexRequest.setPipeline("_id1");
-        ingestService.executeBulkRequest(1, Collections.singletonList(indexRequest), failureHandler, completionHandler, indexReq -> {},
-            Names.WRITE);
+        ingestService.executeBulkRequest(
+            1,
+            Collections.singletonList(indexRequest),
+            failureHandler,
+            completionHandler,
+            indexReq -> {},
+            Names.WRITE
+        );
         final IngestStats afterForthRequestStats = ingestService.stats();
         assertThat(afterForthRequestStats.getPipelineStats().size(), equalTo(2));
-        //total
-        assertStats(afterForthRequestStats.getTotalStats(), 4, 0 ,0);
-        //pipeline
+        // total
+        assertStats(afterForthRequestStats.getTotalStats(), 4, 0, 0);
+        // pipeline
         assertPipelineStats(afterForthRequestStats.getPipelineStats(), "_id1", 3, 0, 0);
         assertPipelineStats(afterForthRequestStats.getPipelineStats(), "_id2", 1, 0, 0);
-        //processor
-        assertProcessorStats(0, afterForthRequestStats, "_id1", 1, 1, 0); //not carried forward since type changed
-        assertProcessorStats(1, afterForthRequestStats, "_id1", 2, 0, 0); //carried forward and added from old stats
+        // processor
+        assertProcessorStats(0, afterForthRequestStats, "_id1", 1, 1, 0); // not carried forward since type changed
+        assertProcessorStats(1, afterForthRequestStats, "_id1", 2, 0, 0); // carried forward and added from old stats
         assertProcessorStats(0, afterForthRequestStats, "_id2", 1, 0, 0);
     }
 
-    public void testStatName(){
+    public void testStatName() {
         Processor processor = mock(Processor.class);
         String name = randomAlphaOfLength(10);
         when(processor.getType()).thenReturn(name);
@@ -1398,7 +1636,6 @@ public class IngestServiceTests extends ESTestCase {
         when(pipelineProcessor.getTag()).thenReturn(tag);
         assertThat(IngestService.getProcessorName(pipelineProcessor), equalTo(name + ":" + pipelineName + ":" + tag));
     }
-
 
     public void testExecuteWithDrop() {
         Map<String, Processor.Factory> factories = new HashMap<>();
@@ -1425,20 +1662,27 @@ public class IngestServiceTests extends ESTestCase {
             }
         });
         IngestService ingestService = createWithProcessors(factories);
-        PutPipelineRequest putRequest = new PutPipelineRequest("_id",
-            new BytesArray("{\"processors\": [{\"drop\" : {}}, {\"mock\" : {}}]}"), XContentType.JSON);
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            "_id",
+            new BytesArray("{\"processors\": [{\"drop\" : {}}, {\"mock\" : {}}]}"),
+            XContentType.JSON
+        );
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build(); // Start empty
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
 
         BulkRequest bulkRequest = new BulkRequest();
-        final IndexRequest indexRequest1 =
-            new IndexRequest("_index").id("_id1").source(Collections.emptyMap()).setPipeline("_none").setFinalPipeline("_none");
+        final IndexRequest indexRequest1 = new IndexRequest("_index").id("_id1")
+            .source(Collections.emptyMap())
+            .setPipeline("_none")
+            .setFinalPipeline("_none");
         bulkRequest.add(indexRequest1);
 
-        IndexRequest indexRequest2 =
-            new IndexRequest("_index").id("_id2").source(Collections.emptyMap()).setPipeline("_id").setFinalPipeline("_none");
+        IndexRequest indexRequest2 = new IndexRequest("_index").id("_id2")
+            .source(Collections.emptyMap())
+            .setPipeline("_id")
+            .setFinalPipeline("_none");
         bulkRequest.add(indexRequest2);
 
         @SuppressWarnings("unchecked")
@@ -1447,8 +1691,14 @@ public class IngestServiceTests extends ESTestCase {
         final BiConsumer<Thread, Exception> completionHandler = mock(BiConsumer.class);
         @SuppressWarnings("unchecked")
         final IntConsumer dropHandler = mock(IntConsumer.class);
-        ingestService.executeBulkRequest(bulkRequest.numberOfActions(), bulkRequest.requests(), failureHandler,
-            completionHandler, dropHandler, Names.WRITE);
+        ingestService.executeBulkRequest(
+            bulkRequest.numberOfActions(),
+            bulkRequest.requests(),
+            failureHandler,
+            completionHandler,
+            dropHandler,
+            Names.WRITE
+        );
         verify(failureHandler, never()).accept(any(), any());
         verify(completionHandler, times(1)).accept(Thread.currentThread(), null);
         verify(dropHandler, times(1)).accept(1);
@@ -1458,9 +1708,7 @@ public class IngestServiceTests extends ESTestCase {
         final AtomicInteger counter = new AtomicInteger(0);
 
         // Ingest cluster state listener state should be invoked first:
-        Consumer<ClusterState> ingestClusterStateListener = clusterState -> {
-            assertThat(counter.compareAndSet(0, 1), is(true));
-        };
+        Consumer<ClusterState> ingestClusterStateListener = clusterState -> { assertThat(counter.compareAndSet(0, 1), is(true)); };
 
         // Processor factory should be invoked secondly after ingest cluster state listener:
         IngestPlugin testPlugin = new IngestPlugin() {
@@ -1475,13 +1723,23 @@ public class IngestServiceTests extends ESTestCase {
 
         // Create ingest service:
         Client client = mock(Client.class);
-        IngestService ingestService =
-            new IngestService(mock(ClusterService.class), threadPool, null, null, null, List.of(testPlugin), client);
+        IngestService ingestService = new IngestService(
+            mock(ClusterService.class),
+            threadPool,
+            null,
+            null,
+            null,
+            List.of(testPlugin),
+            client
+        );
         ingestService.addIngestClusterStateListener(ingestClusterStateListener);
 
         // Create pipeline and apply the resulting cluster state, which should update the counter in the right order:
-        PutPipelineRequest putRequest = new PutPipelineRequest("_id",
-            new BytesArray("{\"processors\": [{\"test\" : {}}]}"), XContentType.JSON);
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            "_id",
+            new BytesArray("{\"processors\": [{\"test\" : {}}]}"),
+            XContentType.JSON
+        );
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build(); // Start empty
         ClusterState previousClusterState = clusterState;
         clusterState = IngestService.innerPut(putRequest, clusterState);
@@ -1494,13 +1752,17 @@ public class IngestServiceTests extends ESTestCase {
     public void testCBORParsing() throws Exception {
         AtomicReference<Object> reference = new AtomicReference<>();
         Consumer<IngestDocument> executor = doc -> reference.set(doc.getFieldValueAsBytes("data"));
-        final IngestService ingestService = createWithProcessors(Collections.singletonMap("foo",
-                (factories, tag, description, config) -> new FakeProcessor("foo", tag, description, executor)));
+        final IngestService ingestService = createWithProcessors(
+            Collections.singletonMap("foo", (factories, tag, description, config) -> new FakeProcessor("foo", tag, description, executor))
+        );
 
         ClusterState clusterState = ClusterState.builder(new ClusterName("_name")).build();
         ClusterState previousClusterState = clusterState;
-        PutPipelineRequest putRequest = new PutPipelineRequest("_id",
-            new BytesArray("{\"processors\": [{\"foo\" : {}}]}"), XContentType.JSON);
+        PutPipelineRequest putRequest = new PutPipelineRequest(
+            "_id",
+            new BytesArray("{\"processors\": [{\"foo\" : {}}]}"),
+            XContentType.JSON
+        );
         clusterState = IngestService.innerPut(putRequest, clusterState);
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, previousClusterState));
         assertThat(ingestService.getPipeline("_id"), notNullValue());
@@ -1510,11 +1772,19 @@ public class IngestServiceTests extends ESTestCase {
             builder.field("data", "This is my data".getBytes(StandardCharsets.UTF_8));
             builder.endObject();
 
-            IndexRequest indexRequest =
-                new IndexRequest("_index").id("_doc-id").source(builder).setPipeline("_id").setFinalPipeline("_none");
+            IndexRequest indexRequest = new IndexRequest("_index").id("_doc-id")
+                .source(builder)
+                .setPipeline("_id")
+                .setFinalPipeline("_none");
 
-            ingestService.executeBulkRequest(1, Collections.singletonList(indexRequest),
-                (integer, e) -> {}, (thread, e) -> {}, indexReq -> {}, Names.WRITE);
+            ingestService.executeBulkRequest(
+                1,
+                Collections.singletonList(indexRequest),
+                (integer, e) -> {},
+                (thread, e) -> {},
+                indexReq -> {},
+                Names.WRITE
+            );
         }
 
         assertThat(reference.get(), is(instanceOf(byte[].class)));
@@ -1663,10 +1933,7 @@ public class IngestServiceTests extends ESTestCase {
     public void testUpdatingRandomPipelineWithoutChangesIsNoOp() throws Exception {
         var randomMap = randomMap(10, 50, IngestServiceTests::randomMapEntry);
 
-        XContentBuilder x = XContentBuilder.builder(XContentType.JSON.xContent())
-            .startObject()
-            .field("processors", randomMap)
-            .endObject();
+        XContentBuilder x = XContentBuilder.builder(XContentType.JSON.xContent()).startObject().field("processors", randomMap).endObject();
 
         OutputStream os = x.getOutputStream();
         x.generator().close();
@@ -1683,17 +1950,21 @@ public class IngestServiceTests extends ESTestCase {
         var pipelineId = randomAlphaOfLength(5);
         var existingPipeline = new PipelineConfiguration(pipelineId, new BytesArray(pipelineString), XContentType.JSON);
         var clusterState = ClusterState.builder(new ClusterName("test"))
-            .metadata(Metadata.builder().putCustom(
-                    IngestMetadata.TYPE,
-                    new IngestMetadata(Map.of(pipelineId, existingPipeline))
-                ).build()
-            ).build();
+            .metadata(Metadata.builder().putCustom(IngestMetadata.TYPE, new IngestMetadata(Map.of(pipelineId, existingPipeline))).build())
+            .build();
 
         Client client = mock(Client.class);
         ClusterService clusterService = mock(ClusterService.class);
         when(clusterService.state()).thenReturn(clusterState);
-        IngestService ingestService = new IngestService(clusterService, threadPool, null, null,
-            null, Collections.singletonList(DUMMY_PLUGIN), client);
+        IngestService ingestService = new IngestService(
+            clusterService,
+            threadPool,
+            null,
+            null,
+            null,
+            Collections.singletonList(DUMMY_PLUGIN),
+            client
+        );
         ingestService.applyClusterState(new ClusterChangedEvent("", clusterState, clusterState));
 
         CountDownLatch latch = new CountDownLatch(1);
@@ -1754,12 +2025,14 @@ public class IngestServiceTests extends ESTestCase {
         IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> IngestService.innerPut(request, clusterState));
         assertThat(
             e.getMessage(),
-            equalTo(String.format(
-                Locale.ROOT,
-                "version conflict, required version [%s] for pipeline [%s] but no pipeline was found",
-                version,
-                pipelineId
-            ))
+            equalTo(
+                String.format(
+                    Locale.ROOT,
+                    "version conflict, required version [%s] for pipeline [%s] but no pipeline was found",
+                    version,
+                    pipelineId
+                )
+            )
         );
     }
 
@@ -1769,24 +2042,23 @@ public class IngestServiceTests extends ESTestCase {
         var pipelineString = "{\"version\": " + version + ", \"processors\": []}";
         var existingPipeline = new PipelineConfiguration(pipelineId, new BytesArray(pipelineString), XContentType.JSON);
         var clusterState = ClusterState.builder(new ClusterName("test"))
-            .metadata(Metadata.builder().putCustom(
-                    IngestMetadata.TYPE,
-                    new IngestMetadata(Map.of(pipelineId, existingPipeline))
-                ).build()
-            ).build();
+            .metadata(Metadata.builder().putCustom(IngestMetadata.TYPE, new IngestMetadata(Map.of(pipelineId, existingPipeline))).build())
+            .build();
 
         final Integer requestedVersion = randomValueOtherThan(version, ESTestCase::randomInt);
         var request = new PutPipelineRequest(pipelineId, new BytesArray(pipelineString), XContentType.JSON, requestedVersion);
         IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> IngestService.innerPut(request, clusterState));
         assertThat(
             e.getMessage(),
-            equalTo(String.format(
-                Locale.ROOT,
-                "version conflict, required version [%s] for pipeline [%s] but current version is [%s]",
-                requestedVersion,
-                pipelineId,
-                version
-            ))
+            equalTo(
+                String.format(
+                    Locale.ROOT,
+                    "version conflict, required version [%s] for pipeline [%s] but current version is [%s]",
+                    requestedVersion,
+                    pipelineId,
+                    version
+                )
+            )
         );
     }
 
@@ -1796,22 +2068,14 @@ public class IngestServiceTests extends ESTestCase {
         var pipelineString = "{\"version\": " + version + ", \"processors\": []}";
         var existingPipeline = new PipelineConfiguration(pipelineId, new BytesArray(pipelineString), XContentType.JSON);
         var clusterState = ClusterState.builder(new ClusterName("test"))
-            .metadata(Metadata.builder().putCustom(
-                    IngestMetadata.TYPE,
-                    new IngestMetadata(Map.of(pipelineId, existingPipeline))
-                ).build()
-            ).build();
+            .metadata(Metadata.builder().putCustom(IngestMetadata.TYPE, new IngestMetadata(Map.of(pipelineId, existingPipeline))).build())
+            .build();
 
         var request = new PutPipelineRequest(pipelineId, new BytesArray(pipelineString), XContentType.JSON, version);
         IllegalArgumentException e = expectThrows(IllegalArgumentException.class, () -> IngestService.innerPut(request, clusterState));
         assertThat(
             e.getMessage(),
-            equalTo(String.format(
-                Locale.ROOT,
-                "cannot update pipeline [%s] with the same version [%s]",
-                pipelineId,
-                version
-            ))
+            equalTo(String.format(Locale.ROOT, "cannot update pipeline [%s] with the same version [%s]", pipelineId, version))
         );
     }
 
@@ -1821,11 +2085,8 @@ public class IngestServiceTests extends ESTestCase {
         var pipelineString = "{\"version\": " + existingVersion + ", \"processors\": []}";
         var existingPipeline = new PipelineConfiguration(pipelineId, new BytesArray(pipelineString), XContentType.JSON);
         var clusterState = ClusterState.builder(new ClusterName("test"))
-            .metadata(Metadata.builder().putCustom(
-                    IngestMetadata.TYPE,
-                    new IngestMetadata(Map.of(pipelineId, existingPipeline))
-                ).build()
-            ).build();
+            .metadata(Metadata.builder().putCustom(IngestMetadata.TYPE, new IngestMetadata(Map.of(pipelineId, existingPipeline))).build())
+            .build();
 
         final int specifiedVersion = randomValueOtherThan(existingVersion, ESTestCase::randomInt);
         var updatedPipelineString = "{\"version\": " + specifiedVersion + ", \"processors\": []}";
@@ -1843,11 +2104,8 @@ public class IngestServiceTests extends ESTestCase {
         var pipelineString = "{\"version\": " + existingVersion + ", \"processors\": []}";
         var existingPipeline = new PipelineConfiguration(pipelineId, new BytesArray(pipelineString), XContentType.JSON);
         var clusterState = ClusterState.builder(new ClusterName("test"))
-            .metadata(Metadata.builder().putCustom(
-                    IngestMetadata.TYPE,
-                    new IngestMetadata(Map.of(pipelineId, existingPipeline))
-                ).build()
-            ).build();
+            .metadata(Metadata.builder().putCustom(IngestMetadata.TYPE, new IngestMetadata(Map.of(pipelineId, existingPipeline))).build())
+            .build();
 
         var updatedPipelineString = "{\"processors\": []}";
         var request = new PutPipelineRequest(pipelineId, new BytesArray(updatedPipelineString), XContentType.JSON, existingVersion);
@@ -1887,7 +2145,7 @@ public class IngestServiceTests extends ESTestCase {
         processors.put("set", (factories, tag, description, config) -> {
             String field = (String) config.remove("field");
             String value = (String) config.remove("value");
-            return new FakeProcessor("set", tag, description, (ingestDocument) ->ingestDocument.setFieldValue(field, value));
+            return new FakeProcessor("set", tag, description, (ingestDocument) -> ingestDocument.setFieldValue(field, value));
         });
         processors.put("remove", (factories, tag, description, config) -> {
             String field = (String) config.remove("field");
@@ -1903,8 +2161,7 @@ public class IngestServiceTests extends ESTestCase {
         ThreadPool threadPool = mock(ThreadPool.class);
         when(threadPool.generic()).thenReturn(EsExecutors.DIRECT_EXECUTOR_SERVICE);
         when(threadPool.executor(anyString())).thenReturn(EsExecutors.DIRECT_EXECUTOR_SERVICE);
-        return new IngestService(mock(ClusterService.class), threadPool, null, null,
-            null, Collections.singletonList(new IngestPlugin() {
+        return new IngestService(mock(ClusterService.class), threadPool, null, null, null, Collections.singletonList(new IngestPlugin() {
             @Override
             public Map<String, Processor.Factory> getProcessors(final Processor.Parameters parameters) {
                 return processors;
@@ -1937,7 +2194,7 @@ public class IngestServiceTests extends ESTestCase {
 
         @Override
         public boolean matches(IngestDocument other) {
-            //ingest metadata will not be the same (timestamp differs every time)
+            // ingest metadata will not be the same (timestamp differs every time)
             return Objects.equals(ingestDocument.getSourceAndMetadata(), other.getSourceAndMetadata());
         }
     }
